mod colors/mod Extractions to Dental Extractions

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
        
        <div class="content">
            <div class="title">
-               Oral Surgery Group for
+               Oral Surgery Group
                <div class="slider">
                    <div>Dental Implants</div>
                    <div>Full Arch Dental Implants</div>
-                   <div>Extractions</div>
+                   <div>Dental Extractions</div>
                </div>
            </div>
            <p>Oral Surgery Group has proudly served San Francisco since 1981<br>We accept Dental Insurance and offer payment plans</p>
